[tool.poetry]
name = "hw04"
version = "0.1.0"
description = "Learn to create Server and Client"
authors = ["1Oleksandr <kondratiuk.ai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
